# OOP_Project_Group9

./: Project Tentative Plan  README.md  assets_sizes.txt  main.cpp  plan.txt  rules.txt  tasks.json  tempCodeRunnerFile.python
HeaderFiles/: CMakeLists.txt  Dice.cpp  Dice.hpp  RulesScreen.hpp  Screen.hpp  dice.cpp  dice.hpp  game.cpp  game.hpp  kill.cpp  kill.hpp  main.cpp  music.cpp  music.hpp  musicManager.cpp  musicManager.hpp  play.cpp  play.hpp  rules.cpp  rules.hpp  safe.cpp  safe.hpp  score.cpp  score.hpp  screen.hpp  screenManager.cpp  screenManager.hpp  tempCodeRunnerFile.cpp  time.cpp  time.h  timer.cpp  token.cpp  token.hpp  tokens.cpp  tokens.hpp  welcomeScreen.cpp  welcomeScreen.hpp
SourceFiles/: RulesScreen.cpp  welcomeScreen.cpp
txt files/: Project Tentative Plan  code.txt  listt = [.py  newCode.txt  rules.txt  screenArray.txt
